# trumpStockAlert

./: .deploy-api.ps1  .gitignore  README.md  run-collector.ps1  setup-collector-python.ps1  steps.md
backend/: Program.cs  README.md  TrumpStockAlert.Api.csproj  TrumpStockAlert.Api.http  appsettings.Development.json  appsettings.json
backend/Controllers/: AlertsController.cs  AnalysesController.cs  AnalysisController.cs  CollectorController.cs  TruthPostsController.cs
backend/DTOs/: AlertResponse.cs  CollectorRunResponse.cs  CollectorRunTestResponse.cs  CollectorTestRunResponse.cs  CreateTruthPostRequest.cs  MockAnalysisPreviewRequest.cs  OpenAiAnalysisPreviewResponse.cs  ParsePreviewRequest.cs  ParsePreviewResponse.cs  PostAnalysisResponse.cs  PromptPreviewResponse.cs  TruthPostResponse.cs
collector/: README.md  pyproject.toml
collector-function/: CollectorTimerFunction.cs  Program.cs  README.md  TrumpStockAlert.CollectorFunction.csproj  local.settings.sample.json
collector/collector/: __init__.py  api_truth_post_store.py  config.py  main.py  models.py  normalizer.py  post_store_result.py  service.py  truth_post_store.py  truth_social_client.py
collector/data/: truth-posts.json
collector/tests/: test_api_truth_post_store.py  test_normalizer.py  test_service.py  test_truth_post_store.py
collector/trump_stock_alert_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  README.md  package-lock.json  package.json
truthsocial-fetcher-poc/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
(+67 files in other folders)
